# qt-3dviewer

./: .gitignore  README.md
docs/: index.html  style.css
src/: CMakeLists.txt  Makefile  affine.c  affine.h  list.c  list.h  main.cc  obj_parcer.c  obj_parcer.h  resources.qrc  tests.c  tests.check
src/3DViewer/: 3DViewer.pro  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qglview.cpp  qglview.h
src/Docs/: documentation.html  style.css
src/Qtgifimage/gifimage/: Makefile  qdoc_wrapper.sh
src/controller/: controller.cc  controller.h
src/model/: figure.cc  figure.h  model.cc  model.h  parser.cc  parser.h  point3d.cc  point3d.h  square_matrix.cc  square_matrix.h  transformation_matrix4d.cc  transformation_matrix4d.h
src/shaders/: fragment.glsl  vertex.glsl
src/tests/: controller_tests.cc  controller_tests.h  parser_tests.cc  parser_tests.h  square_matrix_tests.cc  square_matrix_tests.h  transformation_matrix4d_tests.cc  transformation_matrix4d_tests.h
src/view/: incorrect_file_dialog_window.cc  incorrect_file_dialog_window.h  incorrect_file_dialog_window.ui  openglwidget.cc  openglwidget.h  opening_file_dialog_window.cc  opening_file_dialog_window.h  opening_file_dialog_window.ui  settings_saver.cc  settings_saver.h  view.cc  view.h  view.ui
